--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,11 +9,15 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
-flask = ">=3.1.0,<4.0.0"
-starlette = "^0.45.3"
-pydantic = "^2.10.6"
+flask = "^3.1.0"
 flask-restx = "^1.3.0"
 rich = "^13.9.4"
+starlette = "^0.45.3"
+pydantic = "^2.10.6"
+sqlalchemy = "^2.0.0"  # Pegando versão mais recente compatível
+flask_sqlalchemy = "^3.1.1"
+psycopg2 = "^2.9.9"
+flask-cors = "^4.0.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
